--- a/Foodie/Web.config
+++ b/Foodie/Web.config
@@ -14,7 +14,22 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="RazorpayKey" value="rzp_test_jq6ngtwXE6BeH0" />
     <add key="RazorpaySecret" value="FZpFs1GRpkCTRiDcBBLh9lUK" />
+	
+			  
+			  <add key="SmtpServer" value="smtp.gmail.com" />
+	  <add key="SmtpPort" value="587" />
+	  <add key="SmtpUsername" value="icecube122001@gmail.com" />
+	  <add key="SmtpPassword" value="reojszutmbrhsuvx" />
+	  <add key="SenderEmail" value="icecube122001@gmail.com" />
+	  
   </appSettings>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="Network" from="icecube122001@gmail.com">
+				<network host="smtp.gmail.com" port="587" userName="icecube122001@gmail.com" password="reojszutmbrhsuvx" enableSsl="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
   <connectionStrings>
     <add name="cs" connectionString="Data Source=Lenovo\SQLEXPRESS;Initial Catalog=FoodieDB;Integrated Security=True; MultipleActiveResultSets=true;" providerName="System.Data.SqClient" />
     <add name="FoodieDBConnectionString" connectionString="Data Source=Lenovo\SQLEXPRESS;Initial Catalog=FoodieDB;Integrated Security=True" providerName="System.Data.SqlClient" />
