--- a/Foodie/Foodie.csproj
+++ b/Foodie/Foodie.csproj
@@ -220,6 +220,8 @@
     <Content Include="email.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Images\payment-bg.png" />
+    <Content Include="TemplateFiles\css\style1.css" />
+    <Content Include="User\Payment1.aspx" />
     <Content Include="User\About.aspx" />
     <Content Include="User\bookseat.aspx" />
     <Content Include="User\Cart.aspx" />
@@ -233,7 +235,6 @@
     <Content Include="User\Login.aspx" />
     <Content Include="User\Menu.aspx" />
     <Content Include="User\Payment.aspx" />
-    <Content Include="User\Payment1.aspx" />
     <Content Include="User\payment2.aspx" />
     <Content Include="User\PaymentPage.aspx" />
     <Content Include="User\ProductDetails.aspx" />
@@ -243,6 +244,7 @@
     <Content Include="User\ReviewForm.aspx" />
     <Content Include="User\SliderUserControl1.ascx" />
     <Content Include="User\Success.aspx" />
+    <Content Include="User\vaccancy.aspx" />
     <Content Include="User\vaccanyreg.aspx" />
     <Content Include="User\videos.aspx" />
     <Content Include="User\Wishlist.aspx" />
@@ -330,8 +332,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="User\Payment1.aspx.cs">
+      <DependentUpon>Payment1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\Payment1.aspx.designer.cs">
+      <DependentUpon>Payment1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SendEmailWithGoogleSMTP.cs" />
     <Compile Include="User\About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -423,13 +431,6 @@
     <Compile Include="User\Payment.aspx.designer.cs">
       <DependentUpon>Payment.aspx</DependentUpon>
     </Compile>
-    <Compile Include="User\Payment1.aspx.cs">
-      <DependentUpon>Payment1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="User\Payment1.aspx.designer.cs">
-      <DependentUpon>Payment1.aspx</DependentUpon>
-    </Compile>
     <Compile Include="User\payment2.aspx.cs">
       <DependentUpon>payment2.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -500,6 +501,13 @@
     <Compile Include="User\User.Master.designer.cs">
       <DependentUpon>User.Master</DependentUpon>
     </Compile>
+    <Compile Include="User\vaccancy.aspx.cs">
+      <DependentUpon>vaccancy.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\vaccancy.aspx.designer.cs">
+      <DependentUpon>vaccancy.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User\vaccanyreg.aspx.cs">
       <DependentUpon>vaccanyreg.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -537,6 +545,18 @@
     <Content Include="assets\datatables\fonts\themify.woff" />
     <None Include="packages.config" />
     <Content Include="User\User.Master" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile2.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile3.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile4.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile5.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile6.pubxml" />
+    <None Include="Properties\PublishProfiles\Foodie20240326164401 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\icecube - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\icecube - Web Deploy1.pubxml" />
+    <None Include="Properties\PublishProfiles\sharvanthika-001-site1 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\sharvanthika-001-site1 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -551,7 +571,6 @@
     <Folder Include="Images\review\" />
     <Folder Include="Images\User\" />
     <Folder Include="Models\" />
-    <Folder Include="TemplateFiles\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
